# company-lens

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  eval-full.yml
config/: company_identity_aliases.yaml  financial_metric_mappings.v1.yaml  investor_pdfs.yaml
deploy/postgres/: least_privilege.sql
docs/: financial-metrics.md  macro-analytics.md  operations.md  research-api.md
docs/architecture/: adr-0001-core-domain-source-lineage.md  adr-0002-baseline-retrieval.md  adr-0003-adaptive-hierarchical-retrieval.md  adr-0004-langgraph-research-tools.md  adr-0005-persistent-research-sessions.md  core-domain-er.md
evals/datasets/golden/: README.md  core.v1.yaml  (+1 more)
evals/gates/: eval-fast.v1.yaml  eval-full.v1.yaml
migrations/: env.py  script.py.mako
migrations/versions/: 0001_enable_pgvector.py  0002_core_domain_model.py  0003_sec_ingestion_failures.py  0004_pdf_blocks.py  0005_processing_metadata.py  0006_retrieval_indexes.py  0007_company_facts_metrics.py  0008_fred_macro_series.py  0009_research_sessions.py  0010_evidence_claim_validation.py  0011_research_api.py  0012_sec_filing_period_metadata.py  0013_research_correlation.py  0014_company_identity_registry.py
notebooks/: company_lens_local_corpus_demo.ipynb
prompts/: manifest.yaml
prompts/agent/: extract-company-mentions.txt  generate-answer.txt  parse-question.txt  plan-request.txt  repair-answer.txt  semantic-support-judge.txt
prompts/processing/: document-summary.txt  section-summary.txt
src/company_lens/: __init__.py  cli.py  config.py  main.py  prompt_sync.py  prompts.py  reliability.py  security.py
tests/: test_adaptive_retrieval.py  test_agent_application.py  test_agent_cli.py  test_agent_contracts.py  test_agent_events.py  test_agent_openai_provider.py  test_agent_persistence.py  test_agent_persistence_postgres.py  test_agent_semantic_judge.py  test_agent_tools.py  test_agent_workflow.py  test_analytics.py  test_company_facts.py  test_company_identity_registry.py  test_config.py  test_deterministic_evals.py  test_document_processing.py  test_domain_models.py  test_evidence_validation.py  test_fred.py  test_golden_agent_runner.py  test_golden_dataset.py  test_health.py  test_observability_security.py  test_pdf_ingestion.py  test_prompt_provider.py  test_prompt_sync.py  test_reliability.py  test_reliability_security.py  test_research_api.py  test_research_api_postgres.py  test_research_worker.py  test_retrieval.py  test_retrieval_postgres.py  test_sec_client.py  test_sec_ingestion.py  test_security.py
tests/agent_workflow/: builders.py  context.py  fakes_financial.py  fakes_model.py  fakes_more.py  fakes_tools.py  shared.py  test_add_company_bar_chart.py  test_add_series_context.py  test_ambiguity_and_memory.py  test_answer_display_and_validation.py  test_artifact_timeline.py  test_chart_generation.py  test_citation_and_answer_fallbacks.py  test_company_extraction.py  test_default_chart_window.py  test_failures_and_budgets.py  test_financial_fallbacks.py  test_followup_company_sets.py  test_hybrid_chart_normalization.py  test_missing_company_abstain.py  test_multi_company_fallback.py  test_period_and_replay.py  test_preparation_resolution.py  test_prepared_followup_ticker.py  test_prompt_and_repair_context.py  test_ready_ticker_and_missing_data.py  test_replay_variants.py  test_route_overrides_and_calculations.py  test_routes_core.py  test_validation_and_missing_company.py
tools/data-checks/: .gitignore  README.md  requirements.txt
web/: README.md  eslint.config.js  index.html  openapi.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/e2e/: research.spec.ts
web/src/: App.tsx  main.tsx  styles.css
(+171 files in other folders)
